--- a/actus.html
+++ b/actus.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+tags : [web, jekyll]
 ---
 
-{% for post in site.categories['actus'] %}
+{% for post in site.categories['actus'] limit:5 %}
 <article class="{{ post.categories | first | downcase | append :'-box'}}">
   <div class="titre-categorie">
     <h4>{{ post.categories | first }}</h4>
@@ -15,3 +16,21 @@ layout: default
   </div>
 </article>
 {% endfor %}
+
+<div class="pagination">
+  {% if paginator.next_page %}
+    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">Plus ancien</a>
+  {% else %}
+    <!-- <span class="pagination-item older">Plus ancien</span> -->
+  {% endif %}
+  {% if paginator.previous_page %}
+    {% if paginator.page == 2 %}
+      <a class="pagination-item newer" href="{{ site.baseurl }}/">Plus récent</a>
+    {% else %}
+      <a class="pagination-item newer" href="{{ site.baseurl }}/page{{paginator.previous_page}}">Plus récent</a>
+    {% endif %}
+  {% else %}
+    <!-- <span class="pagination-item newer">Plus récent</span> -->
+  {% endif %}
+</div>
+
