--- a/ecrits.html
+++ b/ecrits.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in site.categories['Écrits'] limit:5 %}
+{% for post in site.categories['Écrits']%}
 <article class="{{ post.categories | first | downcase | replace: 'é','e' | replace: 'É','e' | append :'-box'}}">
   <div class="titre-categorie">
     <h4>{{ post.categories | first }}</h4>
@@ -15,20 +15,3 @@ layout: default
   </div>
 </article>
 {% endfor %}
-
-<div class="pagination">
-  {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">Plus ancien</a>
-  {% else %}
-    <!-- <span class="pagination-item older">Plus ancien</span> -->
-  {% endif %}
-  {% if paginator.previous_page %}
-    {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/">Plus récent</a>
-    {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/page{{paginator.previous_page}}">Plus récent</a>
-    {% endif %}
-  {% else %}
-    <!-- <span class="pagination-item newer">Plus récent</span> -->
-  {% endif %}
-</div>
