--- a/tag.html
+++ b/tag.html
@@ -32,28 +32,26 @@ Here we generate all the tags.
 
 <article class="article-wrap">
 
-<h1>
-  {{ page.title }}
-</h1>
+<h1>{{ page.title }}</h1>
 
 {% for tag in tags %}
 <h2 id="{{ tag | slugify }}">{{ tag }}</h2>
-<ul class="codinfox-category-list">
-  {% for post in site.posts %}
-  {% if post.tags contains tag %}
-  <li>
-    <h3>
-      <a href="{{ post.url }}">
-        {{ post.title }}
-        <small>{{ post.date | date_to_string }}</small>
-      </a>
-      {% for tag in post.tags %}
-      <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
-      {% endfor %}
-    </h3>
-  </li>
-  {% endif %}
-  {% endfor %}
-</ul>
+
+{% for post in site.posts %}
+{% if post.tags contains tag %}
+<div class="block-tag">
+  <h3>
+    <a href="{{ post.url }}">
+      {{ post.title }}
+      <small>{{ post.date | date_to_string }}</small>
+    </a>
+    {% for tag in post.tags %}
+    <a href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+    {% endfor %}
+  </h3>
+</div>
+{% endif %}
+{% endfor %}
+
 {% endfor %}
 </article>
