--- a/tag.html
+++ b/tag.html
@@ -32,10 +32,10 @@ Here we generate all the tags.
 
 <article class="article-wrap">
 
-<h1>{{ page.title }}</h1>
+<h1>Catégories et thèmes de recherche</h1>
 
 {% for tag in tags %}
-<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
+<h2 id="{{ tag | slugify }}" class="tag-style">{{ tag }}</h2>
 
 {% for post in site.posts %}
 {% if post.tags contains tag %}
@@ -46,7 +46,7 @@ Here we generate all the tags.
       <small>{{ post.date | date_to_string }}</small>
     </a>
     {% for tag in post.tags %}
-    <a href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+    <a href="/blog/tag/#{{ tag | slugify }}" class="tag-frame">{{ tag }}</a>
     {% endfor %}
   </h3>
 </div>
