--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ title: Accueil
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">Précédent</a>
   {% else %}
-    <span class="previous">Précédent</span>
+    <!-- <span class="previous">Précédent</span> -->
   {% endif %}
   <!-- <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span> -->
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">Suivant</a>
   {% else %}
-    <span class="next ">Suivant</span>
+    <!-- <span class="next ">Suivant</span> -->
   {% endif %}
   </div>
 </div>
