--- a/evenements.html
+++ b/evenements.html
@@ -4,15 +4,5 @@ title: Les événements
 ---
 
 {% for post in site.categories['Événements'] %}
-<article class="{{ post.categories | first | downcase | replace: 'é','e' | replace: 'É','e' | append :'-box'}}">
-  <div class="titre-categorie">
-    <p>{{ post.categories | first }}</p>
-  </div>
-  <div class="content-wrap">
-    <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-    <aside class="author">
-      <h4>publié par <strong>{{ post.author }}</strong> le <strong>{{ post.date | date: "%d/%m/%Y" }}</strong></h4>
-    </aside>
-  </div>
-</article>
+{% include article-loop.html %}
 {% endfor %}
